--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
-  background-color: #694cb3;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS324jmvMZUW2QXEPuSXbVt051TWwBu0sPbngkIq3O_wdJnL4IYjz4a_WS06vuJJLMWWDo&usqp=CAU");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
   font-family: "Roboto", sans-serif;
 }
 
@@ -9,6 +13,7 @@ a {
 
 .weather-app {
   background: white;
+  opacity: 0.8;
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -17,13 +22,13 @@ a {
 }
 
 header {
-  border-bottom: 1px solid #f9f7fe;
+  border-bottom: 1px solid greenyellow;
   padding: 0 0 30px 0;
 }
 
 .search-form-input {
-  background-color: #f9f7fe;
-  border: none;
+  background-color: white;
+  border-color: greenyellow;
   border-radius: 6px;
   width: 80%;
   font-size: 16px;
@@ -31,7 +36,7 @@ header {
 }
 
 .search-form-button {
-  background: #885df1;
+  background: #53a8b6;
   padding: 15px 30px;
   border: none;
   font-size: 16px;
@@ -51,19 +56,20 @@ main {
 
 .weather-app-city {
   margin: 0;
-  font-size: 38px;
+  font-size: 60px;
+  color: #1e5263;
   line-height: 48px;
 }
 
 .weather-app-details {
   font-size: 16px;
-  color: rgba(39, 33, 66, 0.4);
+  color: #1e5263;
   line-height: 24px;
   font-weight: 500;
 }
 
 .weather-app-details strong {
-  color: #f65282;
+  color: #f4b401;
 }
 
 .weather-app-temperature-container {
@@ -79,11 +85,13 @@ main {
   font-size: 88px;
   margin-left: 10px;
   font-weight: bold;
+  color: #1e5263;
 }
 
 .weatehr-app-unit {
   margin-top: 16px;
   font-size: 28px;
+  color: #1e5263;
 }
 
 footer {
@@ -91,5 +99,5 @@ footer {
   padding: 30px 0 0 0;
   text-align: center;
   font-size: 14px;
-  color: rgba(0, 0, 0, 0.6);
+  color: #53a8b6;
 }
