--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,14 @@
 body {
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS324jmvMZUW2QXEPuSXbVt051TWwBu0sPbngkIq3O_wdJnL4IYjz4a_WS06vuJJLMWWDo&usqp=CAU");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-
+  background-color: #f9f7fe;
   font-family: "Roboto", sans-serif;
 }
 
 a {
-  color: #1e5263;
+  color: #885df1;
 }
 
 .weather-app {
   background: white;
-  opacity: 0.8;
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -22,13 +17,13 @@ a {
 }
 
 header {
-  border-bottom: 1px solid greenyellow;
+  border-bottom: 1px solid #f9f7fe;
   padding: 0 0 30px 0;
 }
 
 .search-form-input {
-  background-color: white;
-  border-color: greenyellow;
+  background-color: #f9f7fe;
+  border: none;
   border-radius: 6px;
   width: 80%;
   font-size: 16px;
@@ -36,7 +31,7 @@ header {
 }
 
 .search-form-button {
-  background: #53a8b6;
+  background: #885df1;
   padding: 15px 30px;
   border: none;
   font-size: 16px;
@@ -56,20 +51,19 @@ main {
 
 .weather-app-city {
   margin: 0;
-  font-size: 60px;
-  color: #1e5263;
+  font-size: 38px;
   line-height: 48px;
 }
 
 .weather-app-details {
   font-size: 16px;
-  color: #1e5263;
+  color: rgba(39, 33, 66, 0.4);
   line-height: 24px;
   font-weight: 500;
 }
 
 .weather-app-details strong {
-  color: #f4b401;
+  color: #f65282;
 }
 
 .weather-app-temperature-container {
@@ -85,13 +79,11 @@ main {
   font-size: 88px;
   margin-left: 10px;
   font-weight: bold;
-  color: #1e5263;
 }
 
 .weatehr-app-unit {
   margin-top: 16px;
   font-size: 28px;
-  color: #1e5263;
 }
 
 footer {
@@ -99,5 +91,5 @@ footer {
   padding: 30px 0 0 0;
   text-align: center;
   font-size: 14px;
-  color: #53a8b6;
+  color: rgba(0, 0, 0, 0.6);
 }
