--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 body {
-  background-color: #f9f7fe;
+  background-color: #f9cbcb;
   font-family: "Roboto", sans-serif;
 }
 
 a {
-  color: #885df1;
+  color: #407088;
 }
 
 .weather-app {
@@ -22,7 +22,7 @@ header {
 }
 
 .search-form-input {
-  background-color: #f9f7fe;
+  background-color: #f7b5b6;
   border: none;
   border-radius: 6px;
   width: 80%;
@@ -31,7 +31,7 @@ header {
 }
 
 .search-form-button {
-  background: #885df1;
+  background: #407088;
   padding: 15px 30px;
   border: none;
   font-size: 16px;
@@ -57,13 +57,13 @@ main {
 
 .weather-app-details {
   font-size: 16px;
-  color: rgba(39, 33, 66, 0.4);
+  color: #132743;
   line-height: 24px;
   font-weight: 500;
 }
 
 .weather-app-details strong {
-  color: #f65282;
+  color: #407088;
 }
 
 .weather-app-temperature-container {
@@ -84,6 +84,7 @@ main {
 .weatehr-app-unit {
   margin-top: 16px;
   font-size: 28px;
+  color: #407088;
 }
 
 footer {
