--- a/src/index.css
+++ b/src/index.css
@@ -89,12 +89,14 @@ main {
 .weather-forecast {
   display: flex;
   justify-content: space-around;
-  margin-top: 30px;
+  margin-top: 20px;
+  text-align: center;
 }
 
 .weather-forecast-date {
   text-align: center;
   color: rgba(39, 33, 66, 0.4);
+  opacity: 0.6;
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 10px;
@@ -110,9 +112,11 @@ main {
   margin-top: 10px;
   display: flex;
   justify-content: center;
+  font-size: 13px;
 }
 .weather-forecast-temperature {
   padding: 0 10px;
+  font-size: 13px;
 }
 
 footer {
