--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 body {
-  background-color: #f9cbcb;
+  background-color: #f9f7fe;
   font-family: "Roboto", sans-serif;
 }
 
 a {
-  color: #407088;
+  color: #885df1;
 }
 
 .weather-app {
@@ -22,7 +22,7 @@ header {
 }
 
 .search-form-input {
-  background-color: #f7b5b6;
+  background-color: #f9f7fe;
   border: none;
   border-radius: 6px;
   width: 80%;
@@ -31,7 +31,7 @@ header {
 }
 
 .search-form-button {
-  background: #407088;
+  background: #885df1;
   padding: 15px 30px;
   border: none;
   font-size: 16px;
@@ -57,13 +57,13 @@ main {
 
 .weather-app-details {
   font-size: 16px;
-  color: #132743;
+  color: rgba(39, 33, 66, 0.4);
   line-height: 24px;
   font-weight: 500;
 }
 
 .weather-app-details strong {
-  color: #407088;
+  color: #f65282;
 }
 
 .weather-app-temperature-container {
@@ -71,32 +71,30 @@ main {
 }
 
 .weather-app-icon {
-  font-size: 44px;
-  margin-top: 22px;
+  width: 88px;
+  height: 88px;
 }
 
 .weather-app-temperature {
   font-size: 88px;
-  margin-left: 10px;
+  line-height: 88px;
   font-weight: bold;
 }
 
-.weatehr-app-unit {
-  margin-top: 16px;
+.weather-app-unit {
+  margin-top: 6px;
   font-size: 28px;
-  color: #407088;
 }
+
 .weather-forecast {
   display: flex;
   justify-content: space-around;
-  margin-top: 20px;
-  text-align: center;
+  margin-top: 30px;
 }
 
 .weather-forecast-date {
   text-align: center;
   color: rgba(39, 33, 66, 0.4);
-  opacity: 0.6;
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 10px;
@@ -112,11 +110,10 @@ main {
   margin-top: 10px;
   display: flex;
   justify-content: center;
-  font-size: 13px;
 }
+
 .weather-forecast-temperature {
   padding: 0 10px;
-  font-size: 13px;
 }
 
 footer {
